src/test/deca/syntax/valid/modulo_int_modulo_int_modulo_int.deca
// Description : 
// 
//      Test syntaxiquement correctde la modulo d'un int avec la modulo d'un int avec la modulo d'un int.
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par le gl03

{
    int y =3%2%5;
}